--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 }
 
 dependencies {
-compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
 }
 
 def targetJavaVersion = 17
@@ -46,4 +46,9 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+tasks.register('moveOutput', Exec) {
+    workingDir = file('C:\\Users\\IXBOB\\Desktop\\SoManyRewards')
+    commandLine 'cmd', '/c', 'move_output.bat'
 }
