--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,9 +3,31 @@ Rewards:
     #(minute) Defines how long the interval is, displayed as an item in the BasicGameTime GUI.
     each_time_period_shown: 20
     #Normal rewards are distributed to each normal node from top to bottom in a loop.
+    normal_rewards_default_display_material: GOLD_INGOT
     normal_rewards:
-      [[]]
+      0:
+        rewards: ["give %player% diamond 1"]
+        local_texts: ["basic_playtime_node_normal_diamond_plus_1"]
+      1:
+        rewards: ["give %player% emerald 1"]
+        local_texts: ["basic_playtime_node_normal_emerald_plus_1"]
+      2:
+        rewards: ["give %player% iron_ingot 1"]
+        local_texts: ["basic_playtime_node_normal_iron_ingot_plus_1"]
+
     #Special rewards will be inserted into the GUI as a separate node at the defined time.
     #If the node conflicts with normal rewards, the special rewards node will overwrite the normal rewards node.
+    special_rewards_default_display_material: GOLD_BLOCK
     special_rewards:
-      [[]]
+      0:
+        display_when: 75
+        rewards: ["give %player% carrot 9"]
+        local_texts: ["basic_playtime_node_special_carrot_plus_9"]
+      1:
+        display_when: 150
+        rewards: [ "give %player% snowball 9" ]
+        local_texts: [ "basic_playtime_node_special_snowball_plus_9" ]
+      2:
+        display_when: 225
+        rewards: [ "give %player% gold_block 9" ]
+        local_texts: [ "basic_playtime_node_special_gold_block_plus_9" ]
